--- a/retail-analysis.html
+++ b/retail-analysis.html
@@ -50,7 +50,7 @@
     </div>
   </header><!-- End Header -->
 
-  <div class="hero hero-single route bg-image" style="background-image: url(assets/img/overlay-bg.jpg)">
+  <div class="hero hero-single route bg-image" style="background-image: url(images/analytics.jpg)">
     <div class="overlay-mf"></div>
     <div class="hero-content display-table">
       <div class="table-cell">
@@ -80,7 +80,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper">
-                  <img src="images/sales.jpg" alt=" "class="img-fluid">
+                  <img src="images/retail-sales.jpg" alt=" "class="img-fluid">
                 </div>
                 
               </div>
